--- a/client/src/pages/Login/Login.module.css
+++ b/client/src/pages/Login/Login.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   padding: 10px 20px;
   margin: auto;
-  max-width: 420px;
+  max-width: 380px;
   border-radius: 10px;
   height: 60vh;
   border: 1px solid rgba(211, 211, 211, 0.473);
@@ -17,7 +17,7 @@
 .icon {
   height: 25px;
   width: 25px;
-  padding: 15px;
+  padding: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -35,32 +35,41 @@
 .input-section {
   display: flex;
   flex-direction: column;
+  position: relative;
+  margin-bottom: 15px;
   /* margin-bottom: 10px; */
 }
 
 .input-section input {
   height: 30px;
   font-size: 16px;
-  /* margin-top: 5px; */
-  /* border-radius: 10px; */
-  /* border: 1px solid lightgray; */
+  margin-top: 5px;
+  border-radius: 10px;
+  border: 1px solid lightgray;
   outline: none;
   background: none;
-  background-color: white;
-  border: none;
-  border-radius: 0;
-  border-bottom: 1px solid lightgray;
+  background-color: transparent;
+  padding: 2px 10px;
   margin: 10px 0;
 }
 .input-section input[type="password"] {
   letter-spacing: 0.3em;
 }
-.input-section input:focus {
-  border: none;
-  border-bottom: 1px solid darkgray;
-}
 .input-section label {
   font-size: 14px;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  transition: top 0.5s;
+}
+
+.input-section input:focus ~ label,
+.input-section input:valid ~ label {
+  top: 1px;
+  background-color: white;
+  padding: 0px 4px;
+  color: gray;
+  font-size: 12px;
 }
 
 .footer {
@@ -91,6 +100,12 @@
   cursor: pointer;
 }
 
+.footer-text {
+  margin-top: 25px;
+}
+.text {
+  color: rgb(113, 113, 113);
+}
 .link {
   color: #066163;
   font-weight: 500;
