--- a/client/src/pages/Login/Login.module.css
+++ b/client/src/pages/Login/Login.module.css
@@ -32,15 +32,14 @@
   flex-direction: column;
 }
 
-.input-section {
+/* .input-section {
   display: flex;
   flex-direction: column;
   position: relative;
-  margin-bottom: 15px;
-  /* margin-bottom: 10px; */
-}
+  margin-bottom: 10px;
+} */
 
-.input-section input {
+/* .input-section input {
   height: 30px;
   font-size: 16px;
   margin-top: 5px;
@@ -62,18 +61,41 @@
   left: 20px;
   transition: top 0.5s;
 }
-
-.input-section input:focus ~ label,
-.input-section input:valid ~ label {
+input:focus {
+  border: 1px solid purple;
+  outline: none;
+}
+input:focus ~ label,
+input:valid ~ label {
   top: 1px;
   background-color: white;
   padding: 0px 4px;
-  color: gray;
   font-size: 12px;
 }
+input:valid ~ label {
+  color: #066163;
+  font-weight: 500;
+}
+.error-msg {
+  color: red;
+  font-size: 12px;
+  margin-top: -8px;
+  display: none;
+}
+input:invalid ~ .error-msg {
+  display: block;
+}
+input:invalid[focus="true"] {
+  border: 1.5px solid red;
+  background-color: rgba(255, 199, 199, 0.182);
+}
+
+input:valid {
+  border: 1.5px solid #066163;
+} */
 
 .footer {
-  margin-top: 20px;
+  margin-top: auto;
 }
 
 .cta {
@@ -101,7 +123,7 @@
 }
 
 .footer-text {
-  margin-top: 25px;
+  margin-top: 20px;
 }
 .text {
   color: rgb(113, 113, 113);
