installed the react spinner package and added a spinner to be displayed to show a login spinner when loading.

--- a/client/src/pages/Login/Login.module.css
+++ b/client/src/pages/Login/Login.module.css
@@ -132,3 +132,12 @@ input:valid {
   color: #066163;
   font-weight: 500;
 }
+
+.content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.spinner {
+  margin-right: 10px;
+}
