--- a/client/src/pages/Login/Login.module.css
+++ b/client/src/pages/Login/Login.module.css
@@ -14,6 +14,12 @@
   -moz-box-shadow: 2px 2px 10px -2px rgba(199, 199, 199, 0.75);
 }
 
+.container-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .icon {
   height: 25px;
   width: 25px;
